add authentication modules
